Wrap router-outlet in section to avoid code repeat

--- a/src/app/pokelist/pokelist.component.scss
+++ b/src/app/pokelist/pokelist.component.scss
@@ -3,14 +3,9 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1vw;
     padding: 1vw;
-    border: 1vw solid rgb(33, 30, 30);
-    background-color: rgb(8, 159, 159, 1);
-    height: 75vh;
-    overflow-y: scroll;
 
     @media screen and (orientation: portrait) {
         grid-template-columns: 1fr;
-        border: 2vw solid rgb(33, 30, 30);
         padding: 1.5vw;
         gap: 1.5vw;
     }
